<resources>
    <string name="app_name">Run My Way</string>
    <string name="title_activity_main">Run My Way</string>
    <string name="action_configuration_list">Configuration List</string>
    <string name="action_news">News</string>
    <string name="google_account_alert">You need to sign-in with your Google account to save your data</string>
    <string name="welcome_string">Hello!</string>
    <string name="look_at_activies">Look at your daily activities</string>
    <string name="calories">Calories: %d Kcal</string>
    <string name="time">Time: %s </string>
    <string name="distance">Distance: %.2f Km</string>
    <string name="google_fit_failed">Failed to load Fitness data</string>
    <string name="last_session">Last Session:</string>
    <string name="no_run_session">You don\'t have any sessions yet.</string>
    <string name="title_activity_add_configuration">New running setup</string>
    <string name="total_minutes">Total time: </string>
    <string name="total_walking">Total time walking: </string>
    <string name="total_running">Total time running: </string>
    <string name="add">Add</string>
    <string name="minutes">Minutes</string>
    <string name="confirm">CONFIRM</string>
    <string name="action_imageview">Runnig man</string>
    <string name="total_time_value"> %d minutes</string>
    <string name="ask_confirmation">Save configuration?</string>
    <string name="insert_name">Insert name here</string>
    <string name="cancel">CANCEL</string>
    <string name="save">Save</string>
    <string name="run_sesssion">Start your activity!</string>
    <string name="attention">Attention</string>
    <string name="gps_info_message">Please allow GPS tracking in your device settings</string>
    <string name="ok">OK</string>
    <string name="location_unavailable">Location is not available, the app won\'t track distance</string>
    <string name="play_stop">Play/Stop button</string>
    <string name="play_button">Play button</string>
    <string name="run">Run</string>
    <string name="saved_configuration">Your saved configuration list:</string>
    <string name="configuration_item">Configuration item</string>
    <string name="fitness_news">Latest fitness news from NYT:</string>
    <string name="news">News</string>
    <string name="connection_error">Error retrieving data. Check your Internet connection</string>
    <string name="no_snippet">No snippet available</string>
    <string name="no_title">No title</string>
    <string name="distance_no_data">No distance retrieved yet.</string>
    <string name="calories_no_data">No calories data retrieved yet.</string>
    <string name="subscribe_error">The app couldn\'t register %s data on Google Fit.</string>
    <string name="unsubscribe_error">The app couldn\'t unregister %s data on Google Fit.</string>

    <string name="activity">Activity</string>
    <string name="completed_session">Completed Session</string>
    <string name="home_session_resume">%s:\n%s minutes, %d calories, %.2f Km</string>
    <string name="congratulations">Congratulations</string>
    <string name="home">Home</string>
    <string name="completed_session_resume">You have completed your sessions!\n%s minutes, %d calories, %.2f Km</string>
    <string-array name="running_mode">
        <item>Walk</item>
        <item>Run</item>
    </string-array>
    <string name="appwidget_text">Your last sessions:</string>
    <string name="add_widget">Add widget</string>
    <string name="advice_message">Click to start/stop. Long click to end session</string>
    <string name="thophy">Trophy</string>
    <string name="add_new_configuration">Add new configuration</string>
</resources>
