<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/welcome_string"
        android:textStyle="bold"
        android:textSize="@dimen/main_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/today_achievement_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/look_at_activies"
        android:textSize="@dimen/sub_title_text_size"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        />
    <TextView
        android:id="@+id/today_achievement_distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/calories"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/today_achievement_tv"
        />
    <TextView
        android:id="@+id/today_achievement_calory_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/time"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/today_achievement_distance_tv"
        />
    <TextView
        android:id="@+id/today_achievement_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/distance"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toStartOf="@id/welcome_tv"
        app:layout_constraintTop_toBottomOf="@id/today_achievement_calory_tv"
        />

</android.support.constraint.ConstraintLayout>