<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="32dp">
    <TextView
        android:id="@+id/question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen_dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/sub_title_text_size"
        android:text="@string/ask_confirmation"
        android:textAlignment="center"
        android:gravity="center_vertical"
        />
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/one_dp"
        app:layout_constraintRight_toRightOf="@id/question_tv"
        app:layout_constraintLeft_toLeftOf="@id/question_tv"
        app:layout_constraintTop_toBottomOf="@id/question_tv"
        android:background="@android:color/background_light"/>
    <EditText
        android:id="@+id/config_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/question_tv"
        app:layout_constraintLeft_toLeftOf="@id/question_tv"
        app:layout_constraintTop_toBottomOf="@id/question_tv"
        android:layout_margin="@dimen/sixteen_dp"
        android:hint="@string/insert_name"
        android:gravity="center"
        />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintRight_toRightOf="@id/question_tv"
        app:layout_constraintTop_toBottomOf="@id/config_name_et"/>
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/question_tv"
        app:layout_constraintTop_toBottomOf="@id/config_name_et"
        />
</android.support.constraint.ConstraintLayout>